- HeaderMenu component untested build - HeaderMenu component spec for unit tests

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -23,12 +23,13 @@
 @import 'components/button';
 @import 'components/pagination';
 @import 'components/header';
+@import 'components/header-links';
+@import 'components/header-menu';
 @import 'components/agency-picker';
 @import 'components/input';
 @import 'components/multiselect';
 @import 'components/banner';
 @import 'components/searchbar';
-@import 'components/header-links';
 @import 'components/search-header';
 @import 'components/multiselect-dropdown';
 @import 'components/image-library';
