--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -1,42 +1,11 @@
 .search-bar {
-  /** Styles for the drop down filter btn **/
-  .filter-btn{
-    width: auto;
-    margin: 0;
-    padding: 8px 10px 8px 10px;
-    border-radius: 5px 0 0 5px;
-    background-color: #e2e1e1;
-    color: #777;
-    height: 3.3rem;
-    display: none;
-  }
-
-  .filter-btn:hover{
-    background-color: #d9d9d9;
-    color: #2D2D2D;
-  }
-
-  // .filter-select{
-  //   min-width: 180px;
-  //   opacity: 0;
-  //   position: absolute;
-  //   left: 0;
-  //   top: -30px;
-  // }
-  labelWrapper{
-    position: relative;
-    display: block;
+  .label-wrapper{
+    overflow: hidden;
+    padding: 5px;
+    margin-top: -5px;
     & label{
       display: none;
     }
-  }
-  .label-wrapper:after{
-    content: "\F0D7";
-    color: #777;
-    font: normal normal normal 17px/1 FontAwesome;
-    position: absolute;
-    right: 10px;
-    top:8px;
   }
   select{
     color: #777;
@@ -46,7 +15,9 @@
     border-radius: 5px 0 0 5px;
     padding: 3px 24px 8px 10px;
     height: 33px;
-    background-image: none;
+    background-size: 10px;
+    background-position: right 63px center;
+    background-image: url($assets-path + '/img/arrow-down.png');
     cursor: pointer;
     width: auto;
     line-height: 1.5;
