- Added section to `ui-kit-demo` page for `sam-header-menu`

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -51,6 +51,7 @@
 @import 'pages/help-accounts';
 @import 'pages/help-roadmap';
 @import 'pages/users-directory';
+@import 'pages/ui-kit-demo';
 
 html, body{
   height: 100%;
