--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 samHeader {
   header {
-    background-color: #112e51;
+    background-color: $color-primary-darkest;
     box-shadow: 0 2px 4px rgba(1, 2, 2, 0.1);
     padding: 3px 0;
     text-align: center;
@@ -24,5 +24,3 @@ samHeader {
     display: inline-block;
   }
 }
-
-
