--- a/src/styles/components/_header-menu.scss
+++ b/src/styles/components/_header-menu.scss
@@ -1,21 +1,41 @@
-$menu-background: #112E51;
-$menu-divider-color: #333333;
-$menu-inner-divider-color: #FFFFFF;
+$menu-background: $color-primary-darkest;
 
 $menu-item-height: 40px;
+$menu-item-font: 1.7rem;
+$menu-item-color: $color-white;
+$menu-item-padding: 2.5rem;
 
 .sam-header-menu {
-  border-top-width: 2px;
-  border-top-style: solid ;
-  border-top-color: $menu-divider-color;
+  ul {
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+    padding-left: 0rem;
+  }
 
-  .sam-menu-item {
+  .menu-item {
     height: $menu-item-height;
+    margin: 0rem;
+    padding-left: $menu-item-padding;
+    padding-right: $menu-item-padding;
     background-color: $menu-background;
-    border-bottom-width: 1px;
-    border-bottom-style: 'solid';
-    border-bottom-color: $menu-inner-divider-color;;
     font-size: 1rem;
+    color: $menu-item-color;
+    list-style: none;
     line-height: $menu-item-height;
+
+    a {
+      display: inline-block;
+      font-size: $menu-item-font;
+      text-decoration: none;
+      line-height: $menu-item-height;
+
+      &:focus,
+      &:active,
+      &:hover,
+      &:visited {
+        line-height: $menu-item-height;
+        color: $menu-item-color;
+      }
+    }
   }
 }
