--- a/src/ui-kit/header-menu/header-menu.component.html
+++ b/src/ui-kit/header-menu/header-menu.component.html
@@ -1,6 +1,6 @@
 <div class="sam-header-menu" [hidden]="!states.open" (click)="toggle($event)" (hover)="toggle($event)">
   <ul>
-    <li *ngFor="let item of items; let $index = index;" class="sam-menu-item">
+    <li *ngFor="let item of items; let $index = index;" class="menu-item">
       <a [routerLink]=item.routerLink (click)="dispatch($event)" [innerText]="item.text"></a>
     </li>
   </ul>
