--- a/src/styles/components/_header-menu.scss
+++ b/src/styles/components/_header-menu.scss
@@ -19,6 +19,7 @@ $menu-item-padding: 2.5rem;
     padding-right: $menu-item-padding;
     background-color: $menu-background;
     font-size: 1rem;
+    text-align: left;
     color: $menu-item-color;
     list-style: none;
     line-height: $menu-item-height;
