--- a/src/ui-kit/header-links/header-links.component.html
+++ b/src/ui-kit/header-links/header-links.component.html
@@ -27,10 +27,9 @@
     </div>
   </span>
   <span *ngIf="states.isSignedIn">
-    <div class=" m_R-3x align-top m_B-0x">
-      <div class="white-text header-link" (click)="states.menu = !states.menu">{{ user.fullName }}</div>
+    <div class=" m_R-3x align-top m_B-0x relative">
+      <div class="white-text header-link user-link" (click)="states.menu = !states.menu">{{ user.fullName }}</div>
+      <sam-header-menu *ngIf="states.isSignedIn" [items]="store.menu" [(open)]="states.menu"></sam-header-menu>
     </div>
   </span>
-
-  <sam-header-menu *ngIf="states.isSignedIn" [items]="store.menus" [(open)]="states.menu"></sam-header-menu>
 </div>
