--- a/src/ui-kit/header-menu/header-menu.component.html
+++ b/src/ui-kit/header-menu/header-menu.component.html
@@ -1,7 +1,8 @@
 <div class="sam-header-menu" [hidden]="!states.open">
   <ul>
     <li *ngFor="let item of items; let $index = index;" class="menu-item">
-      <a [routerLink]=item.routerLink (click)="dispatch($event)" [innerText]="item.text"></a>
+      <a *ngIf="item.routerLink" [routerLink]=item.routerLink (click)="dispatch()" [innerText]="item.text"></a>
+      <a *ngIf="!item.routerLink" (click)="dispatch()" [innerText]="item.text"></a>
     </li>
   </ul>
 </div>
