--- a/src/app/assistance-listing/display-template-demo/demo.page.html
+++ b/src/app/assistance-listing/display-template-demo/demo.page.html
@@ -1,18 +1,4 @@
-<display-page [attr.class]="'opportunity-page usa-grid'" [logoSrc]="logoUrl">
-<div display-sidenav>
-   <nav>
-        <ul class="usa-sidenav-list">
-          <li><a href="{{currentUrl}}#overview">Overview</a></li>
-          <li><a href="{{currentUrl}}#authorizations">Authorizations</a></li>
-          <li><a href="{{currentUrl}}#financial-information">Financial Information</a></li>
-          <li><a href="{{currentUrl}}#criteria-for-applying">Criteria for Applying</a></li>
-          <li><a href="{{currentUrl}}#applying-for-assistance">Applying for Assistance</a></li>
-          <li><a href="{{currentUrl}}#compliance-requirements">Compliance Requirements</a></li>
-          <li><a href="{{currentUrl}}#contact-information">Contact Information</a></li>
-          <li><a href="{{currentUrl}}#history">History</a></li>
-        </ul>
-      </nav>
-</div>
+<display-page [attr.class]="'opportunity-page usa-grid'" [logoSrc]="logoUrl" [sidenavConfig]="sidenavModel">
 
 <div display-alert>
   <ng-container *ngIf="alert.length > 0">
