--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="usa-grid" *ngIf="isStage(1)">
     <div class="usa-width-one-half">
       <h1>I have a PIV or CAC card</h1>
-      <span>Government Employees: please insert your card then click the button below</span>
+      <span>Government Employees only: Please insert your card then click the button below</span>
 
       <h2>Coming Soon</h2>
 
